Docs: Fix search results positioning on mobile screen sizes

--- a/docs.kosli.com/assets/_search.scss
+++ b/docs.kosli.com/assets/_search.scss
@@ -26,3 +26,11 @@
 .search-results:empty {
     display: none;
 }
+
+@media only screen and (max-width: $mobile-breakpoint) {
+    .search-results {
+        left: 15px;
+        top: 130px;
+        margin-right:15px;
+    }
+}
